# internal/server/api/v1/pool/post.go
@@ -15,12 +15,12 @@ import (
 // @Tags		工作池
 // @Accept		application/json
 // @Produce		application/json
-// @Param		setting body types.SPool true "pool setting"
-// @Success		200 {object} types.SBase[types.SPool]
+// @Param		setting body types.SPoolReq true "pool setting"
+// @Success		200 {object} types.SBase[types.SPoolReq]
 // @Failure		500 {object} types.SBase[any]
 // @Router		/api/v1/pool [post]
 func Post(c *gin.Context) {
-	var req = new(types.SPool)
+	var req = new(types.SPoolReq)
 	if err := c.ShouldBind(&req); err != nil {
 		logx.Errorln(err)
 		base.Send(c, base.WithCode[any](types.CodeFailed).WithError(err))
